--- a/app/views/clinics/show.html.erb
+++ b/app/views/clinics/show.html.erb
@@ -27,7 +27,7 @@
 
 <p>
   <strong>Image:</strong>
-  <%= @clinic.image %>
+  <img src="<%= @clinic.image %>" width="450" heigth="250" />
 </p>
 
 <%= link_to 'Edit', edit_clinic_path(@clinic) %> |
