--- a/app/views/clinics/_form.html.erb
+++ b/app/views/clinics/_form.html.erb
@@ -11,34 +11,49 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= form.label :name %>
-    <%= form.text_field :name, id: :clinic_name %>
+  <div class="form-group row">
+    <%= form.label :name, class: "col-2 col-form-label" %>
+    <div class="col-sm-10">
+      <%= form.text_field :name, id: :clinic_name, class: "form-control" %>
+    </div>
   </div>
 
-  <div class="field">
-    <%= form.label :location %>
-    <%= form.text_field :location, id: :clinic_location %>
+  <div class="form-group row">
+    <%= form.label :location, class: "col-2 col-form-label" %>
+    <div class="col-sm-10">
+      <%= form.text_field :location, id: :clinic_location, class: "form-control" %>
+    </div>
   </div>
 
-  <div class="field">
-    <%= form.label :rating %>
-    <%= form.number_field :rating, id: :clinic_rating %>
+  <div class="form-group row">
+    <%= form.label :rating, class: "col-2 col-form-label" %>
+    <div class="col-sm-10">
+      <%= form.number_field :rating, id: :clinic_rating, min: 1, max: 5, class: "form-control" %>
+    </div>
   </div>
 
-  <div class="field">
-    <%= form.label :verify %>
-    <%= form.check_box :verify, id: :clinic_verify %>
+  <div class="form-group row">
+    <%= form.label :verify, class: "col-2 col-form-label" %>
+    <div class="col-sm-10">
+      <%= form.check_box :verify, id: :clinic_verify, class: "form-control" %>
+    </div>
   </div>
 
-  <div class="field">
-    <%= form.label :flag %>
-    <%= form.text_field :flag, id: :clinic_flag %>
+  <div>
+  </div>
+  <div class="form-group row">
+    <%= form.label :flag, class: "col-2 col-form-label" %>
+    <div class="col-sm-10">
+      "recommended", "promotion", "default"
+      <%= form.text_field :flag, id: :clinic_flag, class: "form-control" %>
+    </div>
   </div>
 
-  <div class="field">
-    <%= form.label :image %>
-    <%= form.text_field :image, id: :clinic_image %>
+  <div class="form-group row">
+    <%= form.label :image, class: "col-2 col-form-label" %>
+    <div class="col-sm-10">
+      <%= form.text_field :image, id: :clinic_image, class: "form-control" %>
+    </div>
   </div>
 
   <div class="actions">
